--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <h3>Sobre Nós!</h3>
         <div class="video-container">
             <video autoplay muted loop width="500" height="300" >
-            <source src="C:\Users\Willian\Desktop\PROJETO\VIDEO\1.mp4" type="video/mp4">
+            <source src="VIDEO\1.mp4" type="video/mp4">
             Seu navegador não suporta o elemento de vídeo.
             </video>
         </div>
@@ -189,37 +189,37 @@
         <br>
         <p5>Sobre nós<br>Desde o início, tudo foi muito leve e calmo. Claro que temos nossos conflitos, mas sempre conseguimos resolvê-los de forma que tudo continue bem. Desde o começo, sempre deu certo, pois a nossa ideia e nossos pensamentos sempre foram alinhados. Como dizem? "Nosso santo bateu."<br></p5>
         <br>
-        <img src="C:\Users\Willian\Desktop\PROJETO\IMAGENS\1.jpeg" alt="1" width="348" height="600" style="margin: 30px;"  />
+        <img src="IMAGENS\1.jpeg" alt="1" width="348" height="600" style="margin: 30px;"  />
         <br>
         <p5>Acredito que, nesse tempo juntos, mesmo não sendo muito, evoluímos e crescemos bastante, não só como pessoas, mas também dentro do nosso relacionamento. Amo a forma como nos relacionamos, até mesmo os nossos conflitos, pois eles nos tornam mais maduros. Sei que já crescemos muito e ainda vamos crescer muito mais.</p5>
         <br>
-        <img src="C:\Users\Willian\Desktop\PROJETO\IMAGENS\2.jpeg" alt="2" width="348" height="600" style="margin: 30px;"  />
+        <img src="IMAGENS\2.jpeg" alt="2" width="348" height="600" style="margin: 30px;"  />
         <br>
         <p5>Apesar do pouco tempo, já fizemos tantas coisas: muitas viagens, festas, e tudo fica muito melhor quando estamos juntos. E isso é resultado da nossa dedicação um ao outro e, especialmente, ao "nós" que estamos construindo.</p5>
         <br>
-        <img src="C:\Users\Willian\Desktop\PROJETO\IMAGENS\3.jpeg" alt="3" width="500" height="240" style="margin: 30px;"  />
+        <img src="IMAGENS\3.jpeg" alt="3" width="500" height="240" style="margin: 30px;"  />
         <br>
         <p5>Graças à nossa mãezinha, Nossa Senhora Aparecida, estamos construindo parte do nosso futuro: a nossa casa. Nos batalhamos muito para chegar até aqui, só nós dois sabemos o quanto lutamos e continuamos lutando para conquistar tudo isso. Como sempre dizemos: "Disseram que não seria fácil, mas não falaram que seria tão difícil assim."</p5>
         <br>
-        <img src="C:\Users\Willian\Desktop\PROJETO\IMAGENS\4.jpeg" alt="4" width="348" height="600" style="margin: 30px;"  />
+        <img src="IMAGENS\4.jpeg" alt="4" width="348" height="600" style="margin: 30px;"  />
         <br>
         <p5>Amo o fato que vc se tornou Tricolor assim como eu! assim como a foto abaixo prova.🔴⚪️⚫️</p5>
         <br>
-        <img src="C:\Users\Willian\Desktop\PROJETO\IMAGENS\SP.jpeg" alt="SP" width="348" height="600" style="margin: 30px;"  />
+        <img src="IMAGENS\SP.jpeg" alt="SP" width="348" height="600" style="margin: 30px;"  />
         <br>
         <p5>Tudo isso é só uma forma de mostrar que sempre vou encontrar uma maneira de colocar um sorriso no seu rosto. Te amo!</p5>
         <br>
-        <img src="C:\Users\Willian\Desktop\PROJETO\IMAGENS\5.jpeg" alt="5" width="348" height="550" style="margin: 30px;"  />
+        <img src="IMAGENS\5.jpeg" alt="5" width="348" height="550" style="margin: 30px;"  />
         <br>
         <p5>Sobre nós, mesmo dizendo tudo isso, sei que o que o futuro nos reserva é incerto. Mas, com certeza, é algo maravilhoso nos aguardando. Estou ansioso para descobrir o que ele nos proporcionará.</p5>
         <br>
-        <img src="C:\Users\Willian\Desktop\PROJETO\IMAGENS\6.jpeg" alt="6" width="348" height="600" style="margin: 30px;"  />
+        <img src="IMAGENS\6.jpeg" alt="6" width="348" height="600" style="margin: 30px;"  />
         <br>
         <p6>"Our future days. Days of you and me"</p6>
         <br>
         <p5>Sobre nós, mesmo dizendo tudo isso, sei que o que o futuro nos reserva é incerto. Mas, com certeza, é algo maravilhoso nos aguardando. Estou ansioso para descobrir o que ele nos proporcionará.</p5>
         <br>
-        <img src="C:\Users\Willian\Desktop\PROJETO\IMAGENS\7.jpeg" alt="7" width="348" height="600" style="margin: 30px;"  />
+        <img src="IMAGENS\7.jpeg" alt="7" width="348" height="600" style="margin: 30px;"  />
         <br>
         <p6>"I got a woman with eyes that shine. Down deep as a diamond mine. She's my treasure, so very rare. She made me a millionaire"</p6>
         <br>
